--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -38,7 +38,7 @@ jobs:
       - uses: conda-incubator/setup-miniconda@v2
         with:
           activate-environment: anaconda-client-env
-          environment-file: environment.yml
+          environment-file: ./environment.yml
           python-version: 3.8
           auto-activate-base: false
 
