--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -37,7 +37,7 @@ jobs:
         uses: actions/checkout@v3
       - uses: conda-incubator/setup-miniconda@v2
         with:
-          activate-environment: anaconda-client-env
+          activate-environment: emimechanicalmodel
           environment-file: ./environment.yml
           python-version: 3.8
           auto-activate-base: false
