--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -45,6 +45,8 @@ jobs:
       - name: Install dependencies and build docs
         run: |
           pip install .
+          pip install jupyter
+          pip install jupyter-book
           jupyter book build -W docs
 
       - name: Upload artifact
