--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -10,3 +10,4 @@ parts:
   - caption: Running the model
     chapters:
     - file: "part2/meshes_geometries"
+    - file: "part2/active_contraction"
