--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -26,17 +26,17 @@ parse:
     - amsmath
     - dollarmath
     - linkify
-    - "amsmath"
-    - "colon_fence"
-    - "deflist"
-    - "dollarmath"
-    - "html_admonition"
-    - "html_image"
-    - "linkify"
-    - "replacements"
-    - "smartquotes"
-    - "substitution"
+    - amsmath
+    - colon_fence
+    - deflist
+    - dollarmath
+    - html_admonition
+    - html_image
+    - linkify
+    - replacements
+    - smartquotes
+    - substitution
 
 sphinx:
   config:
-    html_extra_path: ["part1/cardiac_anisotropy.png"]
+    html_extra_path: ["part1/cardiac_anisotropy.png", "part1/reference_current.png", "part1/strain_stress_load_concepts.png", "part2/subdomains_meshes_tile_connected_10p0.png", "tile_connected_10p0.h5"]
