--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -8,6 +8,7 @@ copyright: "2022"
 # See https://jupyterbook.org/content/execute.html
 execute:
   execute_notebooks: cache
+  timeout: 500
 
 # Information about where the book exists on the web
 repository:
