--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -9,6 +9,9 @@ copyright: "2022"
 execute:
   execute_notebooks: cache
 
+  # Set timeout for any example to 20 minutes
+  timeout: 1800
+
 # Information about where the book exists on the web
 repository:
   url: https://github.com/aashildte/emimechanicalmodel-tutorial
@@ -39,4 +42,4 @@ parse:
 
 sphinx:
   config:
-    html_extra_path: ["part1/cardiac_anisotropy.png", "part1/reference_current.png", "part1/strain_stress_load_concepts.png", "part2/subdomains_meshes_tile_connected_10p0.png"]
+    html_extra_path: ["preliminaries/geometries_meshes.png", "preliminaries/cardiac_anisotropy.png", "preliminaries/reference_current.png", "preliminaries/strain_stress_load_concepts.png", "part1/subdomains_meshes_tile_connected_10p0.png"]
