more docs; more summer school code

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -42,4 +42,4 @@ parse:
 
 sphinx:
   config:
-    html_extra_path: ["preliminaries/geometries_meshes.png", "preliminaries/cardiac_anisotropy.png", "preliminaries/reference_current.png", "preliminaries/strain_stress_load_concepts.png", "part1/subdomains_meshes_tile_connected_10p0.png"]
+    html_extra_path: ["preliminaries/geometries_meshes.png", "preliminaries/cardiac_anisotropy.png", "preliminaries/reference_current.png", "preliminaries/strain_stress_load_concepts.png", "running_the_model/subdomains_meshes_tile_connected_10p0.png", "running_the_model/deformation_modes.png"]
