--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -29,6 +29,7 @@ jobs:
 
       - name: Install dependencies and build docs
         run: |
+          pip install pytest
           pip install .
 
       - name: Run tests
