commenting out book to see if this is the cause

--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -42,12 +42,12 @@ jobs:
           python-version: 3.8
           auto-activate-base: false
 
-      - name: Install dependencies and build docs
-        run: |
-          pip install .
-          pip install jupyter
-          pip install jupyter-book
-          jupyter book build -W docs
+            #      - name: Install dependencies and build docs
+            #        run: |
+            #          pip install .
+            #          pip install jupyter
+            #          pip install jupyter-book
+            #          jupyter book build -W docs
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
