--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -18,3 +18,4 @@ parts:
     chapters:
     - file: "model_options/contractility"
     - file: "model_options/material_models"
+    - file: "model_options/compressibility"
